--- a/frontend/tweekles-frontend/src/index.css
+++ b/frontend/tweekles-frontend/src/index.css
@@ -7,4 +7,13 @@
   box-sizing: border-box;
 }
 
+body{
+  font-size: 16px;
+  font-family: "Roboto", serif;
+  max-width: 100vw;
+  max-height: 100vw;
+  background-color: #fff;
+}
+
+
 
