startup post detail, routing

--- a/frontend/tweekles-frontend/src/App.css
+++ b/frontend/tweekles-frontend/src/App.css
@@ -5,9 +5,9 @@
 /*Card*/
 .card-section{
   border: 1px solid #A9A9A9;
-  max-width: 35%;
   padding: 0.625rem;
   margin-bottom: 0.625rem;
+  width: 100%
 }
 
 .card-username{
@@ -38,19 +38,12 @@
 
 
 /*Input*/
-.form-input {
-    width: 500px;
-    margin: 30px auto;
-}
 
-textarea {
-    border: 2px solid #bfb9b9;
-    border-radius: 5px;
-    padding: 10px;
-}
 
-textarea:focus {
+
+input {
     outline: none;
+    padding-left:20px;
 }
 
 ::placeholder {
