--- a/frontend/tweekles-frontend/src/App.css
+++ b/frontend/tweekles-frontend/src/App.css
@@ -1,6 +1,15 @@
 /*Button*/
 
+/*Header*/
+.box-username{
+    border: 1px solid green;
+    padding: 10px 5px 10px 5px;
+}
 
+.header{
+    display: flex;
+    justify-content: flex-end;
+}
 
 /*Card*/
 .card-section{
@@ -50,4 +59,27 @@ input {
     color: #bfb9b9;
     font-weight: bold;
     font-size: 15px;
+}
+
+
+/*Modal*/
+.modal-background {
+  width: 100vw;
+  height: 100vh;
+  background-color: rgba(200, 200, 200, 0.3);
+  position: fixed;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.modal-container {
+  width: 400px;
+  height: 350px;
+  background-color: white;
+  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
