--- a/frontend/tweekles-frontend/src/App.css
+++ b/frontend/tweekles-frontend/src/App.css
@@ -2,7 +2,7 @@
 
 /*Header*/
 .box-username{
-    border: 1px solid green;
+    border: 1px solid #B6B6B6;
     padding: 10px 5px 10px 5px;
 }
 
@@ -47,12 +47,16 @@
 
 
 /*Input*/
-
+.input-style{
+  border: 1px solid #B6B6B6;
+  border-radius: 5px;
+  font-size: 14px;
+}
 
 
 input {
     outline: none;
-    padding-left:20px;
+    padding-left:15px;
 }
 
 ::placeholder {
@@ -74,12 +78,22 @@ input {
 }
 
 .modal-container {
-  width: 400px;
+  width: 280px;
   height: 350px;
   background-color: white;
   box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+}
+
+.modal-input{
   display: flex;
-  flex-direction: column;
-  align-items: center;
   justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  margin-top: 75px;
+}
+
+.modal-button{
+  display: flexbox;
+  justify-content: flex-end;
+  align-items: flex-end;
 }
