--- a/frontend/tweekles-frontend/src/pages/login/login.css
+++ b/frontend/tweekles-frontend/src/pages/login/login.css
@@ -2,6 +2,8 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    margin-top:100px;
+    max-height: 100vh;
 }
 
 .box {
@@ -14,5 +16,5 @@
     justify-content: center;
     gap: 30px;
     border-radius: 5px;
-    border: 2px solid black;
+    border: 3px solid #B6B6B6;
 }
